--- a/cxx4/CMakeLists.txt
+++ b/cxx4/CMakeLists.txt
@@ -24,7 +24,7 @@ IF(NCXX_ENABLE_TESTS)
 
 ENDIF()
 
-SET(ALL_TLL_LIBS ${HDF5_C_LIBRARY_hdf5})
+SET(ALL_TLL_LIBS ${HDF5_HL_LIBRARIES} ${HDF5_C_LIBRARIES} curl ${CMAKE_DL_LIBS})
 SET(ALL_TLL_LIBS ${ALL_TLL_LIBS} ${EXTRA_DEPS} PARENT_SCOPE)
 
 ADD_LIBRARY(netcdf-cxx4 ${CXX_SOURCES})
