--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,7 +280,7 @@ INCLUDE(CTest)
 # BUILD_SHARED_LIBS is provided by/used by
 # CMake directly.
 ##
-OPTION(BUILD_SHARED_LIBS "Configure netcdf-cxx as a shared library." ON)
+OPTION(BUILD_SHARED_LIBS "Configure netcdf-cxx as a shared library." OFF)
 IF(BUILD_SHARED_LIBS)
   SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
 ENDIF()
@@ -399,22 +399,6 @@ CHECK_LIBRARY_EXISTS(${NETCDF_C_LIBRARY} nc_def_var_filter "" NC_HAS_DEF_VAR_FIL
 IF(NC_HAS_DEF_VAR_FILTER)
   SET(HAS_DEF_VAR_FILTER ${NC_HAS_DEF_VAR_FILTER} CACHE STRING "")
 ENDIF(NC_HAS_DEF_VAR_FILTER)
-
-###
-# Find HDF5
-###
-IF(MSVC)
-  SET(SEARCH_PACKAGE_NAME ${HDF5_PACKAGE_NAME})
-  FIND_PACKAGE(HDF5 NAMES ${SEARCH_PACKAGE_NAME} COMPONENTS C HL NO_MODULES REQUIRED ${NC_HDF5_LINK_TYPE})
-ELSE(MSVC)
-  FIND_PACKAGE(HDF5 COMPONENTS C HL REQUIRED)
-ENDIF(MSVC)
-
-CHECK_LIBRARY_EXISTS(${HDF5_C_LIBRARIES} H5free_memory "" HAVE_H5FREE_MEMORY)
-IF(NOT HAVE_H5FREE_MEMORY)
-  MESSAGE(STATUS "Plugin support requires libhdf5 with H5Free support. Your libhdf5 install does not provide H5Free.  Please install a newer version of libhdf5 if you require plugin compression support.")
-  SET(NC_HAS_DEF_VAR_FILTER "")
-ENDIF()
 
 ################################
 # End 'seek out dependent libraries'
@@ -592,7 +576,7 @@ INSTALL(
 # INCLUDE_DIRECTORIES(cxx4 examples)
 
 ADD_SUBDIRECTORY(cxx4)
-ADD_SUBDIRECTORY(examples)
+# ADD_SUBDIRECTORY(examples)
 IF(ENABLE_DOXYGEN)
   ADD_SUBDIRECTORY(docs)
 ENDIF()
