--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,12 @@
 ##################################
 
 #Minimum required CMake Version
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.20)
 
 #Project Name
 PROJECT(
     NCXX
+	VERSION 4.3.2
     LANGUAGES C CXX
 )
 
